# RIoT

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/riot-backend/: .gitignore  Cargo.toml  riot.yaml  riot_config.toml  riot_doc.json
src/riot-backend/migrations/2023-11-28-080449_init/: down.sql  up.sql
src/riot-backend/migrations/init/: down.sql  up.sql
src/riot-backend/public/: index.html
src/riot-backend/src/: app_context.rs  config.rs  db.rs  email.tplt  errors.rs  handlers.rs  jwt_utils.rs  main.rs  middlewares.rs  models.rs  mqtt_instance.rs  routes.rs  schema.rs
src/riot-backend/src/handlers/: accounts.rs  devices.rs  mod.rs  riot.rs  tags.rs
src/riot-backend/src/mqtt_instance/: mod.rs
src/riot-backend/src/utils/: email.rs  jwt.rs  mod.rs  mqtt_instance.rs  password.rs
src/riot-frontend/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/riot-frontend/src/: App.vue  config.ts  localstorage.ts  main.ts  parser.ts  type.ts
src/riot-frontend/src/assets/: base.css  main.css
src/riot-frontend/src/components/: CardFormItem.vue  DarkMoon.vue  DashboardProgress.vue  LightSun.vue  RiotHeader.vue  RiotSidebar.vue  RiotSlogan.vue  VueChart.vue
src/riot-frontend/src/router/: index.ts
src/riot-frontend/src/stores/: dark.ts  user.ts
src/riot-frontend/src/views/: DashboardView.vue  DevicePopup.vue  DeviceSubView.vue  LoginPage.vue  MainView.vue  PageNotFound.vue  RegisterPage.vue  SiteStatisticSubView.vue  TypeSubView.vue  UserSubView.vue  VerifyView.vue
src/riot-frontend/src/views/device/: DeviceSubView.vue  EditDevicePopup.vue  NewDevicePopup.vue  RecordDetailSubView.vue
src/riot-frontend/src/views/tag/: TagSubView.vue
src/riot-frontend/src/views/type/: TypeSubView.vue
