[package]
name = "riot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
utoipa = {version = "4", features = ["actix_extras", "chrono"]}
utoipa-swagger-ui = {version = "4", features = ["actix-web"]}
rumqttd = "0.18.0"
rumqttc = "0.23.0"
lazy_static = "1.4.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = "1.0.193"
jsonwebtoken = "9.1.0"
serde_json = "1.0.108"
futures-util = "0.3.29"
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
diesel-async = { version = "0.4.1", features = ["mysql", "deadpool"] }
futures = "0.3.29"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]