[package]
name = "riot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-files = "0.6.2"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
rumqttd = "0.18.0"
rumqttc = "0.23.0"
lazy_static = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.193"
jsonwebtoken = "9.1.0"
serde_json = "1.0.108"
futures-util = "0.3.29"
diesel_migrations = { version = "2.0.0", features = ["mysql"] }
futures = "0.3.29"
env_logger = "0.10.1"
log = "0.4.20"
validator = { version = "0.12", features = ["derive"] }
rust-argon2 = "2.0"
rand = "0.8.5"
moka = { version = "0.12", features = ["future"] }

[dependencies.diesel]
version = "2.1.0"
features = ["mysql", "mysql_backend", "chrono"]

[dependencies.diesel-async]
version = "0.4.1"
features = ["mysql", "async-connection-wrapper", "deadpool"]

[dependencies.lettre]
version = "0.11.2"
default-features = false
features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder", "pool"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1

[profile.release]
# panic = "abort"
opt-level = 3
lto = true
strip = true
codegen-units = 1 # No parallel compiling for better binary size and a bit of performance

[profile.perf]
inherits = "release"
strip = false
codegen-units = 16
debug = true
